trying to get it to read stuff

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Scott’s Psycidelic Games</title>
+    <title>Scott’s Hallucinogen Games</title>
     <link rel="stylesheet" href="style.css" />
       
     <!-- firebase start ****************************************-->
@@ -13,7 +13,7 @@
   </head>
 <body>
   <div class="container">
-    <h1>Scott’s Psycidelic Games</h1>
+    <h1>Scott’s Hallucinogen Games</h1>
 
     <table id="fruitTable">
       <caption>Highscores</caption>
