--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 
     <form id="fruitForm">
       <label for="userName">Your Username:</label>
-      <input type="text" id="userName" name="userName" required />
+      <input type="text" id="userName" name="userName" value="scott" required />
 
       <label for="userAge">Your Age:</label>
-      <input type="number" id="userAge" name="userAge" required />
+      <input type="number" id="userAge" name="userAge" value="1" required />
     </form>
 
     <button onclick="submitform()">Submit</button>
