--- a/games/coinGame.html
+++ b/games/coinGame.html
@@ -20,7 +20,7 @@
   BODY
 ****************************************************-->
 <body>
-  <script src="coinGame.mjs"></script>
+  <script type="module" src="coinGame.mjs"></script>
 </body>
 </html>
 <!--***************************************************
