--- a/games/mazeGame.html
+++ b/games/mazeGame.html
@@ -16,6 +16,6 @@
     </head>
 
     <body>
-        <script src="mazeGame.mjs"></script>
+        <script type="module" src="mazeGame.mjs"></script>
     </body>
 </html>
