--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
 <body>
   <div class="container">
-    <h1>Scott’s Sliocybin Games</h1>
+    <h1>Scott’s Psliocybin Games</h1>
     <a href="games/mazeGame.html">mazegame</a>
     <a href="games/coinGame.html">coinggame</a>
     <table id="fruitTable">
