--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Scott’s Hallucinogen Games</title>
+    <title>Scott’s Psychedelic Games</title>
     <link rel="stylesheet" href="style.css" />
       
     <!-- firebase start ****************************************-->
@@ -13,10 +13,22 @@
   </head>
 <body>
   <div class="container">
-    <h1>Scott’s Psliocybin Games</h1>
-    <a href="signUp.html">Sign up / Login</a>
-    <a href="games/mazeGame.html">mazegame</a>
-    <a href="games/coinGame.html">coingame</a>
+    <div class="header">
+      <h1>Scott’s Psychedelic Games</h1>
+      
+      <a id="logInLink" href="signUp.html">Sign up / Login</a>
+    </div>
+
+    <div class="game-container">
+      <div class="game-box">
+        <img src="images/mazeGame.png" alt="Maze Game Image">
+        <a class="overlayText" href="games/mazeGame.html">Maze Game</a>
+      </div>
+      <div class="game-box">
+        <img src="images/coinGame.png" alt="Coin Game Image">
+        <a class="overlayText" href="games/coinGame.html">Coin Game</a>
+      </div>
+    </div>
     <table id="fruitTable">
       <h3>Highscores</h3>
       <p>Click on games to show appropriate highscores</p>
