--- a/signUp.html
+++ b/signUp.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Scott’s Hallucinogen Games</title>
+    <title>Scott’s Psychedelic Games</title>
     <link rel="stylesheet" href="style.css" />
       
     <!-- firebase start ****************************************-->
@@ -11,23 +11,26 @@
     <!-- firebase end ******************************************-->
     <script type="module" src="./main.mjs"></script>
   </head>
-<body>
-  <div class="container">
-    <h1>Scott’s Psliocybin Games</h1>
+  <body>
+    <div class="container">
+      <h1>Scott’s Psliocybin Games</h1>
 
-    <button id="logInButton" onclick="fb_authenticate()">Login with Google</button>
+      <br>
 
-    <form id="signUpForm" onsubmit="return submitform(event)">
-      <label for="userName">Your Username:</label>
-      <input type="text" id="userName" name="userName" value="scott" minlength="1" maxlength="18" required />
+      <button id="logInButton" onclick="fb_authenticate()">Login with Google</button>
 
-      <label for="userAge">Your Age:</label>
-      <input type="number" id="userAge" name="userAge" value="1" min="16" max="100" required />
+      <form id="signUpForm" onsubmit="return submitform(event)">
+        <label for="userName">Your Username:</label>
+        <input type="text" id="userName" name="userName" minlength="1" maxlength="18" required />
 
-      <button type="submit">Submit</button>
-    </form>
+        <label for="userAge">Your Age:</label>
+        <input type="number" id="userAge" name="userAge" min="16" max="100" required />
 
-    <button id="logOutButton" onclick="fb_logOut()">Log Out</button>
-  </div>
-</body>
+        <br><br>
+        <button type="submit">Submit</button>
+      </form>
+
+      <button id="logOutButton" onclick="fb_logOut()">Log Out</button>
+    </div>
+  </body>
 </html>
