tried changed something

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Scott’s Psychedelic Games</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
       
     <!-- firebase start ****************************************-->
     <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css" />
@@ -21,12 +21,12 @@
 
     <div class="game-container">
       <div class="game-box">
-        <img src="images/mazeGame.png" alt="Maze Game Image">
-        <a class="overlayText" href="games/mazeGame.html">Maze Game</a>
+        <img src="./images/mazeGame.png" alt="Maze Game Image">
+        <a class="overlayText" href="./games/mazeGame.html">Maze Game</a>
       </div>
       <div class="game-box">
-        <img src="images/coinGame.png" alt="Coin Game Image">
-        <a class="overlayText" href="games/coinGame.html">Coin Game</a>
+        <img src="./images/coinGame.png" alt="Coin Game Image">
+        <a class="overlayText" href="./games/coinGame.html">Coin Game</a>
       </div>
     </div>
     <table id="fruitTable">
