--- a/signUp.html
+++ b/signUp.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Scott’s Psliocybin Games</h1>
+      <h1>Scott’s Psychedelic Games</h1>
 
       <br>
 
